# PowerLit

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  run_incoming_ingest_and_parse.command
config/: ai.example.yml  cas_journal_whitelist.template.csv  journal_issue_catalogs.yml  journals.watch.example.yml  queries.example.yml  topics.power-system.yml
docs/: roadmap.md
docs/architecture/: fulltext-acquisition.md
docs/guides/: cas-whitelist-import.md
incoming_pdf/: README.md  audit_existing_notes.cmd  download_assisted_pdfs.cmd  download_oa_pdfs.cmd  extract_attached_pdfs.cmd  process_incoming_pdf.cmd  process_incoming_pdf_full.cmd  repair_indexed_metadata.cmd  run_powerlit_command.ps1  sync_journal_issue_catalogs.cmd  transcribe_attached_pdfs.cmd  transcribe_extracted_pdfs.cmd  workflow_scheduler.cmd  workflow_scheduler.ps1
scripts/maintenance/: audit_parsed_metadata_against_crossref.py  run_full_library_mineru_api_batch.py  run_full_library_mineru_api_batch_dashboard.py  run_full_library_mineru_parse.py  run_incoming_ingest_and_parse.py  run_incoming_ingest_and_parse.sh
src/powerlit/: __init__.py  __main__.py  citations.py  cli.py  models.py  settings.py
src/powerlit/api/: app.py
src/powerlit/providers/: __init__.py  base.py  crossref.py  elsevier.py  ieee.py  openalex.py
src/powerlit/services/: ai_analysis.py  ai_config.py  ai_pricing.py  artifact_metadata.py  assisted_download.py  cas_whitelist.py  catalog_views.py  export.py  (+33 more)
tests/: test_evidence_index.py
tools/: pdf_parse_extract.mjs
(+6 files in other folders)
