[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerlit"
version = "0.2.0b1"
description = "Local-first literature search and normalization toolkit for power systems research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5.0",
  "cryptography>=44.0,<46.0",
  "fastapi>=0.116,<1.0",
  "Jinja2>=3.1,<4.0",
  "openpyxl>=3.1,<4.0",
  "pypdf>=5.4,<6.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "selenium>=4.41,<5.0",
  "typer>=0.16,<1.0",
  "uvicorn>=0.35,<1.0",
  "faiss-cpu>=1.13.2",
  "sentence-transformers>=5.4.0",
  "watchdog>=6.0.0",
  "google-api-python-client>=2.194.0",
  "google-auth-oauthlib>=1.3.1",
  "google-auth-httplib2>=0.3.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<0.13",
]

[project.scripts]
powerlit = "powerlit.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
